# mtg-card-matcher-cpp

./: .gitignore  CMakeLists.txt  Readme.md  card_descriptors.sqlite  h5_to_sqlite.py  main.cpp  matcher.cpp  matcher.h  real_card_mapping.json
.github/workflows/: android-build-native.yml  android-build.yml
